--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
